clusters/pathweb/flux-system/webhook-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-pathweb-clusters-home.yrf.me
  labels:
    external-dns: "cf-yrf-me"
spec:
  ingressClassName: traefik-external
  rules:
  - host: flux-webhook-pathweb-clusters-home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
